--- a/SocialMediaAPI/appsettings.Development.json
+++ b/SocialMediaAPI/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SocialMediaDb": "Server=.\\SQLEXPRESS;Database=SocialMediaDb;Integrated Security=SSPI;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
