--- a/Tests/SocialMediaAPITests/SocialMediaAPITests.csproj
+++ b/Tests/SocialMediaAPITests/SocialMediaAPITests.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.10" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="MSTest.TestAdapter" Version="3.1.1" />
@@ -20,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\SocialMediaApplication\SocialMediaApplication.csproj" />
+    <ProjectReference Include="..\..\SocialMediaAPI\SocialMediaAPI.csproj" />
   </ItemGroup>
 
   <ItemGroup>
