--- a/SocialMediaInfrastructure/SocialMediaInfrastructure.csproj
+++ b/SocialMediaInfrastructure/SocialMediaInfrastructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.23.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.10" />
   </ItemGroup>
 
