--- a/SocialMediaAPI/appsettings.Development.json
+++ b/SocialMediaAPI/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "SocialMediaDb": "Server=.\\SQLEXPRESS;Database=SocialMediaDb;Integrated Security=SSPI;TrustServerCertificate=True",
-    "BlobStorage": ""
+    "BlobStorage": "UseDevelopmentStorage=true"
   },
 
   "serilog": {
